--- a/wrangler.toml
+++ b/wrangler.toml
@@ -19,9 +19,10 @@ bindings = [
 ]
 
 # Durable objects require migrations to create/modify/delete them
+# Using new_sqlite_classes for Cloudflare free plan compatibility
 [[migrations]]
 tag = "v1"
-new_classes = ["TldrawDurableObject"]
+new_sqlite_classes = ["TldrawDurableObject"]
 
 # We store rooms and asset uploads in an R2 bucket
 # You'll need to create this bucket in Cloudflare dashboard:
